--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,21 +1,18 @@
 {% extends "base.html" %}
+{% load blog_extras %}
 {% block content %}
-  <a href="https://getbootstrap.com/docs/5.0/layout/grid/"> Different grid columns doc</a>
-  <div class="row">
-      <div class="col-6 bg-primary">Column 1</div>
-      <div class="col bg-danger">Column 2</div>
-      <div class="col bg-success">Column 3</div>
-  </div>
-  <p>let's add min weight</p>
-  <div class="row">
-    <div class="col-md bg-primary">Column 1</div>
-    <div class="col-md bg-danger">Column 2</div>
-    <div class="col-md bg-success">Column 3</div>
-  </div>
-  <p></p>
-  <div class="row">
-    <div class="col-xs-12 col-sm-10 col-md-6 bg-primary">Column 1</div>
-    <div class="col-xs-12 col-sm-2 col-md-2 bg-danger">Column 2</div>
-    <div class="col bg-success">Column 3</div>
-  </div>
+    <h2>Blog Posts</h2>
+    {% for post in posts %}
+    <div class="row">
+        <div class="col">
+            <h3>{{ post.title }}</h3>
+            <small>By {{ post.author|author_details:request.user }} on {{ post.published_at|date:"M, d Y" }}</small>
+            <p>{{ post.summary }}</p>
+            <p>
+                ({{ post.content|wordcount }} words)
+                <a href="#">Read More</a>
+            </p>
+        </div>
+    </div>
+    {% endfor %}
 {% endblock %}
